<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp" >

    <ImageView
        android:id="@+id/list_item_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/empty"
        android:src="@drawable/ic_contact_picture" />

    <TextView
        android:id="@+id/list_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/list_item_image"
        android:singleLine="true"
        android:text="@string/mainactivity_name"
        android:layout_marginLeft="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/list_item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/list_item_image"
        android:layout_alignLeft="@+id/list_item_name"
        android:singleLine="true"
        android:text="@string/contactsactivity_status"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/list_item_numbertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/list_item_status"
        android:layout_alignParentRight="true"
        android:text="@string/contactactivity_numbertype"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>